# gpu-usage

./: Cargo.toml  README.md  config-template.json
cpu-temp/: Cargo.toml
cpu-temp/src/: lib.rs
gpu-usage/: Cargo.toml
gpu-usage/src/: lib.rs
runner/: Cargo.toml
runner/src/: config.rs  influx.rs  json_ptr.rs  main.rs
src/: config.rs  json_ptr.rs  logger.rs  main.rs
src/bins/: intel_gpu_top.rs  mod.rs  sensors.rs
