[package]
name = "cpu-temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = { version = "0.4" }
chrono = { version = "0.4" }
anyhow = { version = "1.0" }
tokio = { version = "1.30", features = ["process"] }
