[package]
name = "cpu-temp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = { version = "1.0" }
log = { version = "0.4" }
chrono = { version = "0.4" }
tokio = { version = "1.30", features = ["process", "io-util"] }
anyhow = { version = "1.0" }
