[package]
name = "gpu-usage"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/cryeprecision/gpu-usage"

[dependencies]
serde_json = "1.0"
log = { version = "0.4" }
chrono = { version = "0.4" }
tokio = { version = "1.30", features = ["process", "io-util"] }
anyhow = { version = "1.0" }
