[package]
name = "runner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = { version = "0.3" }
tokio = { version = "1.30", features = ["rt", "macros", "fs", "process"] }
chrono = { version = "0.4" }
simplelog = { version = "0.12" }
log = { version = "0.4" }
futures = { version = "0.3", default-features = false, features = ["std"] }
anyhow = { version = "1.0" }
serde_json = "1.0"

cpu-temp = { path = "../cpu-temp" }
gpu-usage = { path = "../gpu-usage" }

[profile.release]
strip = true
